more overflow fixes

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 body {
   overflow: hidden;
-  overflow: -webkit-hidden;
+  // overflow: -webkit-hidden;
 }
 
 // #bodywrapper {
